juniper-from-schema/tests/compile_fail/unsupported_config.stderr
error: Unknown `graphql_schema_from_file` config `foo`
Supported configs are `error_type` and `context_type`

 --> $DIR/unsupported_config.rs:6:5
  |
6 |     foo: Foo
  |     ^^^

error[E0405]: cannot find trait `QueryFields` in this scope
  --> $DIR/unsupported_config.rs:11:6
   |
11 | impl QueryFields for Query {
   |      ^^^^^^^^^^^ not found in this scope

For more information about this error, try `rustc --explain E0405`.
error: Could not compile `juniper-from-schema-tests`.
